[package]
name = "upgradeable-loader-adventures"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.100"
bincode = "=1.3.3"
litesvm = "=0.11.0"
solana-keypair = "=3.1.2"
solana-loader-v3-interface = { version = "=6.1.0", features = ["bincode"] }
solana-pubkey = "=3.0.0"
solana-sdk-ids = "=3.0.0"
solana-signer = "=3.0.0"
solana-system-interface = { version = "=2.0.0", features = ["bincode"] }
solana-transaction = { version = "=3.0.2", features = ["bincode"] }
